--- a/profiles/templates/profile_view.html
+++ b/profiles/templates/profile_view.html
@@ -11,15 +11,15 @@
 								<div class="guild"><a href="/wow/de/game/race/blood-elf">Total Annihilation</a></div>
 							</div>
 							<span class="clear-divider"><!-- --></span>
-							<div class="under-name color-c3"> <span class="level"><strong>100</strong></span>, <a href="/wow/de/game/race/blood-elf" class="race">Blutelfe</a>, <a id="profile-info-spec" href="#talents" class="spec tip">Tierherrschaft</a>, <a href="/wow/de/game/class/hunter" class="class">Jägerin</a>, <span class="realm tip" id="profile-info-realm">Teldrassil</span> </div>
+							<div class="under-name color-c3"> <span class="level"><strong>100</strong></span>, <a href="/wow/de/game/race/blood-elf" class="race">Blutelfe</a>, <a id="profile-info-spec" href="#talents" class="spec tip">Tierherrschaft</a>, <a href="/wow/de/game/class/hunter" class="class">Jägerin</a><span class="comma">,</span> <span class="realm tip" id="profile-info-realm">Teldrassil</span> </div>
 							<div class="achievements"><a href="/wow/de/character/teldrassil/Neevi/achievement">21780</a></div>
 						</div>
 					</div>
 					<ul class="profile-sidebar-menu">
 						<li class=" active"> <a href="/wow/de/character/teldrassil/Neevi/" class="" rel="np"> <span class="arrow">Übersicht</span> </a> </li>
 						<li class=""> <a href="/wow/de/character/teldrassil/Neevi/hunter-pet" class="" rel="np"> <span class="arrow">Begleiter</span> </a> </li>
-						<li class=" disabled"> <a href="javascript:;" class=" has-submenu"> <span class="arrow">Auktionen <i class="fa fa-lock"></i></span> </a> </li>
-						<li class=" disabled"> <a href="javascript:;" class=""> <span class="arrow">Ereignisse <i class="fa fa-lock"></i></span> </a> </li>
+						<li class=" disabled"> <a href="javascript:;" class=" has-submenu"> <span class="arrow">Auktionen</span> </a> </li>
+						<li class=" disabled"> <a href="javascript:;" class=""> <span class="arrow">Ereignisse</span> </a> </li>
 						<li class=""> <a href="/wow/de/character/teldrassil/Neevi/achievement" class=" has-submenu"> <span class="arrow">Erfolge</span> </a> </li>
 						<li class=""> <a href="/wow/de/character/teldrassil/Neevi/challenge" class=""> <span class="arrow">Herausforderungsmodus</span> </a> </li>
 						<li class=""> <a href="/wow/de/character/teldrassil/Neevi/pet" class=""> <span class="arrow">Haus- und Reittiere</span> </a> </li>
@@ -40,8 +40,8 @@
 		<div class="summary-top">
 			<div class="summary-top-right">
 				<ul class="profile-view-options">
-					<li> <a href="/wow/de/character/teldrassil/Neevi/advanced" class="advanced"><i class="fa fa-search"></i> Erweitert</a> </li>
-					<li class="current"> <a href="/wow/de/character/teldrassil/Neevi/simple" class="simple"><i class="fa fa-user"></i> Einfach</a> </li>
+					<li> <a href="/wow/de/character/teldrassil/Neevi/advanced" class="advanced">Erweitert</a> </li>
+					<li class="current"> <a href="/wow/de/character/teldrassil/Neevi/simple" class="simple">Einfach</a> </li>
 				</ul>
 				<div class="summary-averageilvl">
 					<div class="rest"> Durchschnittliche Gegenstandsstufe<br />
